--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src='main.js'></script> -->
 </head>
 <body>
-    <h2>Image Size Cahnges</h2>
+    <h2>Image Size Cahnges third</h2>
 
 <p>Here we specify the width and height of an image with the width and height attributes:</p>
 
